Update the 'gh-pages' branch.

--- a/index.html
+++ b/index.html
@@ -443,8 +443,8 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <h1>Path &amp; Order</h1>
 <div class="details">
 <span id="author" class="author">Jeremie Bresson</span><br>
-<span id="revnumber">version 1.0.0,</span>
-<span id="revdate">2020-08-10</span>
+<span id="revnumber">version 2.0.0,</span>
+<span id="revdate">2021-04-21</span>
 </div>
 <div id="toc" class="toc2">
 <div id="toctitle">Table of Contents</div>
@@ -458,6 +458,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </ul>
 </li>
 <li><a href="#technical-details">Technical details</a></li>
+<li><a href="#download">Download</a></li>
 <li><a href="#source-code">Source Code</a>
 <ul class="sectlevel2">
 <li><a href="#build">Build</a>
@@ -711,6 +712,24 @@ A possible implementation is to use a <code>pages.yaml</code> file inside each f
 </div>
 </div>
 <div class="sect1">
+<h2 id="download"><a class="anchor" href="#download"></a>Download</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>The library is hosted on maven central.</p>
+</div>
+<div class="listingblock">
+<div class="title">Listing 1. Maven coordinates of the library</div>
+<div class="content">
+<pre class="CodeRay highlight"><code data-lang="xml"><span class="tag">&lt;dependency&gt;</span>
+  <span class="tag">&lt;groupId&gt;</span>fr.jmini.utils<span class="tag">&lt;/groupId&gt;</span>
+  <span class="tag">&lt;artifactId&gt;</span>path-order<span class="tag">&lt;/artifactId&gt;</span>
+  <span class="tag">&lt;version&gt;</span>2.0.0<span class="tag">&lt;/version&gt;</span>
+<span class="tag">&lt;/dependency&gt;</span></code></pre>
+</div>
+</div>
+</div>
+</div>
+<div class="sect1">
 <h2 id="source-code"><a class="anchor" href="#source-code"></a>Source Code</h2>
 <div class="sectionbody">
 <div class="paragraph">
@@ -828,8 +847,8 @@ ssh-add ~/.ssh/id_rsa</pre>
 </div>
 <div id="footer">
 <div id="footer-text">
-Version 1.0.0<br>
-Last updated 2020-08-10 22:08:34 +0200
+Version 2.0.0<br>
+Last updated 2020-12-23 17:26:38 +0100
 </div>
 </div>
 <style>
